# SDRMS

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
resources/: data.txt
src/: main.cpp
src/algorithms/: emergency_queue.cpp  emergency_queue.h  graph.cpp  graph.h  heap_priority.cpp  heap_priority.h  knapsack.cpp  knapsack.h  shelter.cpp  shelter.h  stack_history.cpp  stack_history.h  tsp.cpp  tsp.h
src/core/: appdata.cpp  appdata.h  database.cpp  database.h  disastermanagement.h  filemanager.cpp  filemanager.h  thememanager.cpp  thememanager.h
src/ui/: dashboard.cpp  dashboard.h  dashboard.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui
src/ui/pages/: alerts_page.cpp  alerts_page.h  disaster_page.cpp  disaster_page.h  emergency_page.cpp  emergency_page.h  graph_widget.cpp  graph_widget.h  hover_scroll_area.cpp  hover_scroll_area.h  overview_page.cpp  overview_page.h  page_header.h  page_scroll.h  priority_page.cpp  priority_page.h  reports_page.cpp  reports_page.h  resource_page.cpp  resource_page.h  route_page.cpp  route_page.h  settings_page.cpp  settings_page.h  shelter_page.cpp  shelter_page.h  users_page.cpp  users_page.h  zone_page.cpp  zone_page.h
